--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -215,10 +215,10 @@ header nav ul li a {
     transition: all 0.3s ease;
 }
 
-/*.masonry .item:hover {*/
-/*    transform: scale(1.05) !important;*/
-/*    transition: all 0.3s !important;*/
-/*}*/
+.masonry .item:hover {
+    transform: scale(1.05) !important;
+    transition: all 0.3s !important;
+}
 
 .masonry img {
     width: 100%;
