--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -206,16 +206,17 @@ header nav ul li a {
     margin: 0 auto;
 }
 
-.masonry .item {
+.masonry .card {
+    position: relative;
     display: block;
     width: 400px;
-    height: auto;
-    overflow: hidden;
+    /*height: auto;*/
     margin-bottom: 20px;
     transition: all 0.3s ease;
+    perspective: 1000px;
 }
 
-.masonry .item:hover {
+.masonry .card:hover {
     transform: scale(1.07) !important;
 }
 
@@ -236,3 +237,48 @@ header nav ul li a {
     height: 500px;
     width: 300px;
 }
+
+.card-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+}
+
+.card.flipped .card-inner {
+    transform: rotateY(180deg);
+}
+
+.card-front, .card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    backface-visibility: hidden; /* скрываем обратную сторону */
+    border-radius: 2.5%;
+    display: block;
+}
+
+.card-back {
+    background-color: var(--color-bg);
+    transform: rotateY(180deg);
+    display: block;
+    justify-self: center;
+    border: 1px solid var(--color-accent);
+    border-radius: 2.5%;
+    /*height: 90%;*/
+}
+.card-back canvas {
+    transform: none !important;
+    z-index: 1;
+    position: relative;
+    width: 80% !important;
+    height: auto !important;
+    display: flex;
+    justify-self: center;
+    padding-top: 20px;
+}
+
+/*todo decompose style.css*/
