--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -60,7 +60,13 @@ img {
 }
 
 header {
-    padding: 1% 0% 1%;
+    padding: 1% 0% 10%;
+}
+
+header .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
 }
 
 header .logo {
@@ -68,21 +74,58 @@ header .logo {
     font-size: 100px;
     font-weight: 800;
     color: var(--color-accent);
+    padding-bottom: 20px;
+    max-width: 50%;
 }
 
-header nav {
+.right-bubble {
     padding-top: 50px;
-    float: right;
-    width: 25%;
 }
 
-header nav ul {
-    list-style-type: none;
-    display: flex;
-    justify-content: space-between;
+/* Мобильная версия */
+@media (max-width: 768px) {
+    .wallpaper{
+        display: none !important;
+    }
+
+    header {
+        width: 100%;
+        background: url("../static/backgrounds/top_wallpaper_background.jpg") no-repeat center center fixed;
+        background-size: cover;
+    }
+
+    header .container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    header .logo {
+        font-size: 75px;
+        max-width: 50%;
+    }
+
+    header h2,
+    header p {
+        font-size: 40px;
+    }
+
+    .left-bubble {
+        order: 1;
+    }
+
+    .right-bubble {
+        order: 2;
+        font-size: 30px;
+    }
 }
 
-header nav ul li .top_bubble {
+header h2 {
+    color: var(--color-light);
+    max-width: 100%;
+}
+
+header nav ul li {
     display: inline-block;
     padding: 10px 15px;
 }
@@ -96,7 +139,33 @@ header nav ul li a {
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
-    gap: 100px;
+    gap: 50px;
+}
+
+/* Мобильная версия */
+@media (max-width: 768px) {
+    .two-columns {
+        flex-direction: column;
+    }
+
+    .two-columns img {
+        order: 3;
+    }
+
+    .hero p,
+    .survey-question h3 {
+        font-size: 40px;
+        line-height: 1.25;
+    }
+
+    .survey-answer-group,
+    .slide-label {
+        font-size: 30px;
+    }
+
+    .hero h1 {
+        font-size: 75px;
+    }
 }
 
 .swiper-wrapper {
@@ -223,7 +292,6 @@ input[type="radio"] {
     position: relative;
     display: block;
     width: 400px;
-    /*height: auto;*/
     margin-bottom: 20px;
     transition: all 0.3s ease;
     perspective: 1000px;
@@ -279,19 +347,34 @@ input[type="radio"] {
     transform: rotateY(180deg);
     display: block;
     justify-self: center;
+    align-content: center;
     border: 1px solid var(--color-accent);
     border-radius: 2.5%;
     /*height: 90%;*/
 }
+
 .card-back canvas {
     transform: none !important;
     z-index: 1;
     position: relative;
-    width: 80% !important;
+    width: 90% !important;
     height: auto !important;
     display: flex;
-    justify-self: center;
-    padding-top: 20px;
+    padding: 20px;
 }
 
+/* Мобильная версия */
+@media (max-width: 768px) {
+    .masonry .card,
+    .masonry img,
+    .masonry .big,
+    .masonry .small {
+        width: 400px;
+        height: 500px;
+    }
+
+    .masonry .card:has(.empty_tile) {
+        display: none !important;
+    }
+}
 /*todo decompose style.css*/
