--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -60,7 +60,7 @@ img {
 }
 
 header {
-    padding: 1% 0% 10%;
+    padding: 1% 0% 2.5%;
 }
 
 header .container {
@@ -123,6 +123,12 @@ header .logo {
 header h2 {
     color: var(--color-light);
     max-width: 100%;
+}
+
+header nav {
+    list-style: none;
+    display: flex;
+    justify-content: space-between;
 }
 
 header nav ul li {
@@ -387,6 +393,47 @@ input[type="radio"] {
     .masonry .card:has(.empty_tile) {
         display: none !important;
     }
+}
+
+/*Modal overlay */
+modal {
+    display: none;
+    position: fixed;
+    z-index: 9999;
+    left: 50%;
+    top: 100px;
+    width: 100%;
+    height: 100%;
+    background-color: var(--color-bg);
+    opacity: 0;
+    pointer-events: none; /* чтобы клики проходили к странице, пока скрыто */
+    transition: opacity 0.3s ease, transform 0.3s ease;
+    transform: translateY(-125%);
+}
+
+.modal.active {
+    opacity: 1;
+    pointer-events: auto; /* теперь можно кликать по закрытию */
+    transform: translateY(-125%);
+}
+
+.modal-content {
+    margin: 5% auto;
+    display: block;
+    max-width: 50%;
+    max-height: 50%;
+    border-radius: 2.5%;
+}
+
+.close {
+    display: none;
+    position: absolute;
+    top: 20px;
+    right: 35px;
+    color: var(--color-accent);
+    font-size: 40px;
+    font-weight: bold;
+    cursor: pointer;
 }
 
 /*todo decompose style.css*/
