--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,401 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
-@import url('./colors.css');
+
+@import url('base/base.css');
+@import url('base/colors.css');
+@import url('base/variables.css');
+
+@import url('components/link.css');
+@import url('components/backgrounds.css');
+@import url('components/header.css');
+@import url('components/hero.css');
+@import url('components/form.css');
+
+@import url('swiper/swiper.css');
+@import url('masonry/masonry.css');
 
 @view-transition {
     navigation: auto;
 }
-
-* {
-    margin: 0;
-    padding: 0;
-}
-
-body {
-    font-family: "Poppins", Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-    display: flex;
-    flex-direction: column;
-    color: var(--color-light);
-    font-size: calc(15px + 1vmin);
-    background-color: var(--color-bg);
-    min-height: 100vh;
-}
-
-a {
-    text-decoration: none;
-}
-
-a:hover {
-    border-bottom: 5px solid var(--color-accent);
-    transition: all 250ms ease;
-}
-
-img {
-    max-width: 100%;
-    height: auto;
-}
-
-.gradient_background {
-    background: var(--color-bg);
-    background: linear-gradient(
-            180deg,
-            var(--color-bg) 30%,
-            var(--color-bg-second) 43%,
-            var(--color-bg) 75%
-    );
-    width: 100%;
-}
-
-.image_background {
-    width: 100%;
-    background: url("../static/backgrounds/panorama_background_2.jpg") no-repeat center center fixed;
-    background-size: cover;
-}
-
-.container {
-    width: 80%;
-    margin-left: 10%;
-    margin-right: 10%;
-    padding-bottom: 100px;
-    padding-top: 50px;
-}
-
-header {
-    padding: 1% 0% 2.5%;
-}
-
-header .container {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-}
-
-header .logo {
-    text-transform: uppercase;
-    font-size: 100px;
-    font-weight: 800;
-    color: var(--color-accent);
-    padding-bottom: 20px;
-    max-width: 50%;
-}
-
-.right-bubble {
-    padding-top: 50px;
-}
-
-/* Мобильная версия */
-@media (max-width: 768px) {
-    .wallpaper {
-        display: none !important;
-    }
-
-    header {
-        width: 100%;
-        background: url("../static/backgrounds/top_wallpaper_background.jpg") no-repeat center center;
-        background-size: cover;
-    }
-
-    header .container {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-
-    header .logo {
-        font-size: 65px;
-        max-width: 50%;
-    }
-
-    header h2,
-    header p {
-        font-size: 35px;
-        text-align: center;
-    }
-
-    .left-bubble {
-        order: 1;
-    }
-
-    .right-bubble {
-        order: 2;
-        font-size: 30px;
-    }
-}
-
-header h2 {
-    color: var(--color-light);
-    max-width: 100%;
-}
-
-header nav {
-    list-style: none;
-    display: flex;
-    justify-content: space-between;
-}
-
-header nav ul li {
-    display: inline-block;
-    padding: 10px 15px;
-}
-
-header nav ul li a {
-    color: var(--color-accent);
-    font-weight: 700;
-}
-
-.two-columns {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    gap: 50px;
-}
-
-/* Мобильная версия */
-@media (max-width: 768px) {
-    .two-columns {
-        flex-direction: column;
-    }
-
-    .two-columns img {
-        order: 3;
-    }
-
-    .hero p,
-    .survey-question h3 {
-        font-size: 35px;
-        line-height: 1.25;
-    }
-
-    .survey-answer-group,
-    .slide-label {
-        font-size: 30px;
-    }
-
-    .hero h1 {
-        font-size: 65px;
-    }
-}
-
-.swiper-wrapper {
-    padding-bottom: 30px;
-    padding-top: 50px;
-}
-
-.swiper-pagination-bullet {
-    width: 20px !important;
-    height: 20px !important;
-    background-color: var(--color-light) !important;
-    opacity: 0.75 !important;
-    margin: 0 25px !important;
-    border-radius: 50% !important;
-    transition: all 0.3s !important;
-}
-
-.swiper-pagination-bullet-active {
-    background-color: var(--color-accent) !important;
-    transform: scale(1.5) !important;
-}
-
-.swiper-slide img {
-    width: 100%; /* занимает свою slide-коробку */
-    min-height: 700px;
-    max-height: 700px;
-    border-radius: 2.5%;
-    display: block;
-    object-fit: cover;
-}
-
-.slide-label {
-    display: block;
-    text-align: center;
-    margin-top: 20px;
-    font-weight: 600;
-}
-
-.hero {
-    padding-top: 50px;
-    padding-bottom: 20px;
-    font-weight: 300;
-    line-height: 170%;
-}
-
-.hero h2 {
-    color: var(--color-accent);
-    font-size: 50px;
-    font-weight: 600;
-}
-
-.two-columns img {
-    width: clamp(600px, 50%, 1000px);
-    height: auto;
-}
-
-.wallpaper {
-    width: 100%;
-}
-
-.survey-form {
-    padding-top: 50px;
-    padding-bottom: 150px;
-}
-
-.survey-question {
-    max-height: 0;
-    opacity: 0;
-    overflow: hidden;
-    transition: max-height .5s ease, opacity .3s ease;
-    will-change: max-height, opacity;
-}
-
-.survey-question.visible {
-    max-height: 500px;
-    opacity: 1;
-    padding-top: 30px;
-    padding-bottom: 30px;
-}
-
-.survey-question h3 {
-    padding-bottom: 15px;
-    color: var(--color-light);
-    font-weight: 400;
-}
-
-.survey-answer-group {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 10px 20px;
-    width: 50%;
-}
-
-.survey-answer-group label {
-    font-weight: 300;
-    color: var(--color-light);
-    display: flex;
-    align-items: center;
-    text-align: left;
-    gap: 15px;
-    cursor: pointer;
-}
-
-input[type="checkbox"],
-input[type="radio"] {
-    accent-color: var(--color-accent);
-    width: 20px;
-    height: 20px;
-}
-
-.survey-question input {
-    background: var(--color-bg-second);
-    border-radius: 10px;
-    border: 1px solid var(--color-light);
-    padding: 10px 10px;
-    outline: none;
-    font-size: 100%;
-    color: var(--color-light);
-}
-
-.survey-submit-button {
-    background: transparent;
-    cursor: pointer;
-    padding: 20px 10px;
-    font-weight: 500;
-    font-size: 120%;
-    color: var(--color-accent);
-}
-
-.masonry {
-    margin: 0 auto;
-}
-
-.masonry-card {
-    margin-bottom: 30px;
-    width: 400px;
-    transition: all 0.3s ease;
-    perspective: 1000px;
-}
-
-.masonry-card:hover {
-    transform: scale(1.07) !important;
-}
-
-.masonry img {
-    width: 100%;
-    display: block;
-    border-radius: 2.5%;
-}
-
-.masonry .big {
-    height: 800px;
-    width: 600px;
-}
-
-.masonry .small {
-    height: 400px;
-    width: 200px;
-}
-
-.card-inner {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    transition: transform 0.6s;
-    transform-style: preserve-3d;
-}
-
-.card.flipped .card-inner {
-    transform: rotateY(180deg);
-}
-
-.card-front, .card-back {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    backface-visibility: hidden; /* скрываем обратную сторону */
-    border-radius: 2.5%;
-    display: block;
-}
-
-.card-back {
-    background-color: var(--color-bg);
-    transform: rotateY(180deg);
-    display: block;
-    justify-self: center;
-    align-content: center;
-    border: 1px solid var(--color-accent);
-    border-radius: 2.5%;
-    /*height: 90%;*/
-}
-
-.card-back canvas {
-    transform: none !important;
-    z-index: 1;
-    position: relative;
-    width: 90% !important;
-    height: auto !important;
-    display: flex;
-    padding: 20px;
-}
-
-/* Мобильная версия */
-@media (max-width: 768px) {
-    .masonry .card,
-    .masonry img,
-    .masonry .big,
-    .masonry .small {
-        width: 400px;
-        height: 500px;
-    }
-
-    .masonry .card:has(.empty_tile) {
-        display: none !important;
-    }
-}
-
-@media (max-width: 768px) {
-    .gall-block {
-        margin-top: 20px;
-    }
-}
-
-/*todo decompose style.css*/
